[package]
name = "ev-charging-gaps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
serde = {version = "1.0", features = ["derive"] }
clap = { version = "3.1.6", features = ["derive"] }
quadtree-f32 = "0.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }